infrastructure/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    namespace: nginx
    name: nginx-alb-service
    labels:
      app: nginx-server
    annotations:
      external-dns.alpha.kubernetes.io/hostname: nginx.example.com
spec:
  type: NodePort
  selector:
    app: nginx-server
  ports:
    - name: http
      port: 80
      targetPort: 80
      # nodePort: 32123
